@@ -1,17 +1,20 @@
 package com.winterhavenmc.deathcompass.listeners;
 
 import com.winterhavenmc.deathcompass.PluginMain;
+import com.winterhavenmc.deathcompass.messages.MessageId;
 import com.winterhavenmc.deathcompass.sounds.SoundId;
-import com.winterhavenmc.deathcompass.util.DeathCompass;
 
+import org.bukkit.entity.HumanEntity;
+import org.bukkit.event.Cancellable;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
-import org.bukkit.event.inventory.*;
+import org.bukkit.event.inventory.InventoryClickEvent;
+import org.bukkit.event.inventory.InventoryDragEvent;
+import org.bukkit.event.inventory.InventoryMoveItemEvent;
+import org.bukkit.event.inventory.InventoryType;
 import org.bukkit.inventory.ItemStack;
 
 import java.util.*;
-
-import static com.winterhavenmc.deathcompass.messages.MessageId.ACTION_INVENTORY_DENY_TRANSFER;
 
 
 /**
@@ -22,14 +25,13 @@ public final class InventoryEventListener implements Listener {
 	// reference to main class
 	private final PluginMain plugin;
 
-	// set of inventory types to allow shift-click transfers from hotbar (item goes into player inventory)
-	private final static Set<InventoryType> SHIFT_CLICK_ALLOWED_TYPES =
-			Collections.unmodifiableSet(new HashSet<>(
-					Arrays.asList(InventoryType.BEACON,
-							InventoryType.BREWING,
-							InventoryType.CRAFTING,
-							InventoryType.FURNACE,
-							InventoryType.WORKBENCH)));
+	// set of inventory types to allow shift-click transfers from hot bar (item goes into player inventory)
+	private final static Collection<InventoryType> SHIFT_CLICK_ALLOWED_TYPES = Set.of(
+			InventoryType.BEACON,
+			InventoryType.BREWING,
+			InventoryType.CRAFTING,
+			InventoryType.FURNACE,
+			InventoryType.WORKBENCH );
 
 
 	/**
@@ -52,24 +54,19 @@ public final class InventoryEventListener implements Listener {
 	 *
 	 * @param event the event being handled by this method
 	 */
-	@EventHandler
+	@EventHandler(ignoreCancelled = true)
 	public void onInventoryMoveItem(final InventoryMoveItemEvent event) {
-
-		// if event is already cancelled, do nothing and return
-		if (event.isCancelled()) {
-			return;
-		}
 
 		// if prevent-storage is configured false, do nothing and return
 		if (!plugin.getConfig().getBoolean("prevent-storage")) {
 			return;
 		}
 
-		// get itemstack involved in event
+		// get item stack involved in event
 		final ItemStack itemStack = event.getItem();
 
-		// if itemstack is death compass, cancel event
-		if (DeathCompass.isDeathCompass(itemStack)) {
+		// if item stack is death compass, cancel event
+		if (plugin.deathCompassFactory.isDeathCompass(itemStack)) {
 			event.setCancelled(true);
 		}
 	}
@@ -80,89 +77,54 @@ public final class InventoryEventListener implements Listener {
 	 *
 	 * @param event the event being handled by this method
 	 */
-	@EventHandler
+	@EventHandler(ignoreCancelled = true)
 	public void onInventoryClick(final InventoryClickEvent event) {
-
-		// if event is already cancelled, do nothing and return
-		if (event.isCancelled()) {
-			return;
-		}
 
 		// if prevent-storage is configured false, do nothing and return
 		if (!plugin.getConfig().getBoolean("prevent-storage")) {
 			return;
 		}
 
-		// get inventory action
-		final InventoryAction action = event.getAction();
+		switch (event.getAction()) {
 
-		// prevent DeathCompass shift-click transfer to container
-		if (action.equals(InventoryAction.MOVE_TO_OTHER_INVENTORY)) {
+			case MOVE_TO_OTHER_INVENTORY:
+				// check if current item is death compass
+				if (plugin.deathCompassFactory.isDeathCompass(event.getCurrentItem())) {
 
-			// check if current item is death compass
-			if (DeathCompass.isDeathCompass(event.getCurrentItem())) {
+					// if inventory type is in set, do nothing and return (allow transfer between player inventory and hot bar)
+					if (SHIFT_CLICK_ALLOWED_TYPES.contains(event.getInventory().getType())) {
+						return;
+					}
 
-				// if inventory type is in set, do nothing and return (allow transfer between player inventory and hotbar)
-				if (SHIFT_CLICK_ALLOWED_TYPES.contains(event.getInventory().getType())) {
-					return;
+					// cancel event and send player message
+					cancelInventoryTransfer(event, event.getWhoClicked());
 				}
+				break;
 
-				// cancel event
-				event.setCancelled(true);
+			case SWAP_WITH_CURSOR:
+				// check if cursor item or current item is death compass
+				if (plugin.deathCompassFactory.isDeathCompass(event.getCursor())
+						|| plugin.deathCompassFactory.isDeathCompass(event.getCurrentItem())) {
 
-				// send player message
-				plugin.messageBuilder.build(event.getWhoClicked(), ACTION_INVENTORY_DENY_TRANSFER).send();
-
-				// play sound
-				plugin.soundConfig.playSound(event.getWhoClicked(), SoundId.INVENTORY_DENY_TRANSFER);
-			}
-			return;
-		}
-
-		// prevent death compass transfer to container by swapping with other item
-		if (action.equals(InventoryAction.SWAP_WITH_CURSOR)) {
-
-			// check if cursor item or current item is death compass
-			if (DeathCompass.isDeathCompass(event.getCursor())
-					|| DeathCompass.isDeathCompass(event.getCurrentItem())) {
-
-				// check if slot is in container inventory
-				if (event.getRawSlot() < event.getInventory().getSize()) {
-
-					// cancel event
-					event.setCancelled(true);
-
-					// send player message
-					plugin.messageBuilder.build(event.getWhoClicked(), ACTION_INVENTORY_DENY_TRANSFER).send();
-
-					// play sound
-					plugin.soundConfig.playSound(event.getWhoClicked(), SoundId.INVENTORY_DENY_TRANSFER);
+					// check if slot is in container inventory
+					if (event.getRawSlot() < event.getInventory().getSize()) {
+						cancelInventoryTransfer(event, event.getWhoClicked());
+					}
 				}
-			}
-			return;
-		}
+				break;
 
-		// prevent DeathCompass click transfer to container
-		if (action.equals(InventoryAction.PLACE_ONE)
-				|| action.equals(InventoryAction.PLACE_SOME)
-				|| action.equals(InventoryAction.PLACE_ALL)) {
+			case PLACE_ONE:
+			case PLACE_SOME:
+			case PLACE_ALL:
+				// check if cursor item is a death compass
+				if (plugin.deathCompassFactory.isDeathCompass(event.getCursor())) {
 
-			// check if cursor item is a death compass
-			if (DeathCompass.isDeathCompass(event.getCursor())) {
-
-				// check if slot is in container inventory
-				if (event.getRawSlot() < event.getInventory().getSize()) {
-
-					// cancel event
-					event.setCancelled(true);
-
-					// send player message
-					plugin.messageBuilder.build(event.getWhoClicked(), ACTION_INVENTORY_DENY_TRANSFER).send();
-
-					// play sound
-					plugin.soundConfig.playSound(event.getWhoClicked(), SoundId.INVENTORY_DENY_TRANSFER);
+					// check if slot is in container inventory
+					if (event.getRawSlot() < event.getInventory().getSize()) {
+						cancelInventoryTransfer(event, event.getWhoClicked());
+					}
 				}
-			}
+				break;
 		}
 	}
 
@@ -172,13 +134,8 @@ public final class InventoryEventListener implements Listener {
 	 *
 	 * @param event the event being handled by this method
 	 */
-	@EventHandler
+	@EventHandler(ignoreCancelled = true)
 	public void onInventoryDrag(final InventoryDragEvent event) {
-
-		// if event is already cancelled, do nothing and return
-		if (event.isCancelled()) {
-			return;
-		}
 
 		// if prevent-storage is configured false, do nothing and return
 		if (!plugin.getConfig().getBoolean("prevent-storage")) {
@@ -186,22 +143,28 @@ public final class InventoryEventListener implements Listener {
 		}
 
 		// if cursor item is a death compass
-		if (DeathCompass.isDeathCompass(event.getOldCursor())) {
+		if (plugin.deathCompassFactory.isDeathCompass(event.getOldCursor())) {
 
 			// iterate over dragged slots and if any are above max slot, cancel event
 			for (int slot : event.getRawSlots()) {
 				if (slot < event.getInventory().getSize()) {
-					event.setCancelled(true);
-
-					// send player message
-					plugin.messageBuilder.build(event.getWhoClicked(), ACTION_INVENTORY_DENY_TRANSFER).send();
-
-					// play sound
-					plugin.soundConfig.playSound(event.getWhoClicked(), SoundId.INVENTORY_DENY_TRANSFER);
+					cancelInventoryTransfer(event, event.getWhoClicked());
 					break;
 				}
 			}
 		}
+	}
+
+
+	/**
+	 * Cancel transfer of death compass in inventory, send player message and play sound
+	 * @param event the event being cancelled
+	 * @param player the player involved in the event
+	 */
+	private void cancelInventoryTransfer(final Cancellable event, final HumanEntity player) {
+		event.setCancelled(true);
+		plugin.messageBuilder.build(player, MessageId.ACTION_INVENTORY_DENY_TRANSFER).send();
+		plugin.soundConfig.playSound(player, SoundId.INVENTORY_DENY_TRANSFER);
 	}
 
 }
